<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"

             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:orientation="vertical"
             android:padding="3dp"
             android:paddingBottom="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/projectCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:padding="10dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNameOfProject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_of_project"
                    android:textAppearance="@android:style/TextAppearance.Material.Headline"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tvProjectNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/project_number"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/tvCostumer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/costumer_name"
                    android:textAppearance="@android:style/TextAppearance.Material.Small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="0.75"
                android:animateLayoutChanges="false"
                android:divider="?android:dividerVertical"
                android:orientation="horizontal"
                android:showDividers="middle"
                android:weightSum="1">

                <LinearLayout
                    android:id="@+id/llMessages"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="0.33"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivMessages"
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_weight="1"
                        android:transitionName="grLogo"
                        app:srcCompat="@drawable/iv_messages"/>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/comments"
                        android:textAlignment="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPeople"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="0.33"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_weight="1"
                        android:transitionName="grLogo"
                        app:srcCompat="@drawable/ic_people"/>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/people"
                        android:textAlignment="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llTrips"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_weight="0.33"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivTrips"
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_weight="1"
                        android:transitionName="grLogo"
                        app:srcCompat="@drawable/ic_car_blue"/>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="Cesty"
                        android:textAlignment="center"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>
